tests/syntax_errors/lexer.li
1.0.0
'abc
